--- a/tutorial/index.jade
+++ b/tutorial/index.jade
@@ -92,7 +92,7 @@
 
       That's it! We've just implemented an application to instantly route leads
       to sales people using text messages. If you're a
-      Rails developer working with Twilio, you might want to check out these
+      Java developer working with Twilio, you might want to check out these
       other tutorials.
 
       [**Click-To-Call**](//www.twilio.com/docs/tutorials/walkthrough/click-to-call/java/servlets)
